--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			</div>
 			<div class="row text-center align-items-center">
 				<div class="col-md-6">
-					<span class="fa-stack fa-4x">
+					<span class="">
 						<div class="gazou">
 							<img src="img/rag.png" alt="">
 						</div>
@@ -198,7 +198,7 @@
 			</div>
 			<div class="row text-center align-items-center">
 				<div class="col-md-6 order-md-2">
-					<span class="fa-stack fa-4x">
+					<span class="">
 						<img src="img/hana.png" alt="">
 					</span>
 				</div>
@@ -217,7 +217,7 @@
 			</div>
 			<div class="row text-center align-items-center">
 				<div class="col-md-6">
-					<span class="fa-stack fa-4x">
+					<span class="">
 						<img src="img/totawa.png" alt="">
 					</span>
 				</div>
@@ -247,7 +247,7 @@
 			</div>
 			<div class="row text-center">
 				<div class="col-md-12">
-					<span class="fa-stack fa-4x">
+					<span class="">
 						<img src="img/サービス.png" alt="">
 					</span>
 					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
@@ -521,7 +521,7 @@ document.getElementById('thxMessage').style.display = 'block';
 		crossorigin="anonymous"></script>
 
 	<!-- Font Awesome core JavaScript -->
-	<script src="https://kit.fontawesome.com/" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/6d5d0e571f.js" crossorigin="anonymous"></script>
 
 </body>
 
