--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<ul class="timeline">
 						<li>
 							<div class="timeline-image">
-								<img class="h-100 rounded-circle img-fluid" src="img/baby_boy01_smile.png" alt="">
+								<img class="h-100 rounded-circle img-fluid" src="img/undraw_toy_car_7umw.png" alt="">
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -100,7 +100,7 @@
 						</li>
 						<li class="timeline-inverted">
 							<div class="timeline-image">
-								<img class="h-100 rounded-circle img-fluid" src="img/学生2.jpg" alt="">
+								<img class="h-100 rounded-circle img-fluid" src="img/workout.png" alt="">
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -118,7 +118,7 @@
 						</li>
 						<li>
 							<div class="timeline-image">
-								<img class="h-100 rounded-circle img-fluid" src="img/work.png" alt="">
+								<img class="h-100 rounded-circle img-fluid" src="img/hirata.png" alt="">
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -129,14 +129,14 @@
 									<p class="text-muted">
 										① 地元の大手IoT企業へ就職。<br>
 										② プログラミングに興味を持ち始める。<br>
-										③ 一年で見切りをつけて退職。
+										③ エンジニアへの転職を決意し退職。
 									</p>
 								</div>
 							</div>
 						</li>
 						<li class="timeline-inverted">
 							<div class="timeline-image">
-								<img class="h-100 rounded-circle img-fluid" src="img/img_7_m.png" alt="">
+								<img class="h-100 rounded-circle img-fluid" src="img/jokyo.png" alt="">
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -145,7 +145,7 @@
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">
-										① とりあえずで上京する。<br>
+										① 勢いで上京する。<br>
 										② シェアハウスに住み始め、紹介でエンジニアの方と出会う。<br>
 										③ その方の紹介でGAOBowlでの学習開始。
 									</p>
@@ -179,7 +179,7 @@
 				<div class="col-md-6">
 					<span class="">
 						<div class="gazou">
-							<img src="img/rag.png" alt="">
+							<img src="" alt="">
 						</div>
 					</span>
 				</div>
@@ -248,7 +248,7 @@
 			<div class="row text-center">
 				<div class="col-md-12">
 					<span class="">
-						<img src="img/service.png" alt="">
+						<img src="img/service_2.png" alt="">
 					</span>
 					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
 						<h4 class="service-heading">Creating LP</h4>
