--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<div class="col-md-6">
 					<span class="">
 						<div class="gazou">
-							<img src="" alt="">
+							<img src="img/rag.png" alt="">
 						</div>
 					</span>
 				</div>
@@ -227,7 +227,7 @@
 					<!-- </a> -->
 					<p class="text-muted"></p>
 					<p class="text-muted">
-						上京後にすぐ、東京タワーに訪れて、写真を撮りました！<br>
+						上京後、東京タワーに訪れて写真を撮りました！<br>
 						予想以上の迫力に圧倒されました〜<br>
 						将来は、一望できるタワマンに住んでみたい...笑
 					</p>
@@ -270,27 +270,27 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading text-uppercase">Skills</h2>
-					<h3 class="section-subheading text-muted">This is my Skills.</h3>
+					<h3 class="section-subheading text-muted">随時更新いたします！</h3>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="skills">
-						<img class="mx-auto rounded-circle" src="img/HTML.jpg" alt="">
+						<img class="mx-auto rounded-circle" src="img/html4.png" alt="">
 						<h4>HTML</h4>
 						<p class="text-muted">勉強中</p>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="skills">
-						<img class="mx-auto rounded-circle" src="img/css.png" alt="">
+						<img class="mx-auto rounded-circle" src="img/css3.png" alt="">
 						<h4>CSS</h4>
 						<p class="text-muted">勉強中</p>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="skills">
-						<img class="mx-auto rounded-circle" src="img/php.jpg" alt="">
+						<img class="mx-auto rounded-circle" src="img/php2.png" alt="">
 						<h4>PHP</h4>
 						<p class="text-muted">勉強中</p>
 					</div>
@@ -375,15 +375,15 @@ document.getElementById('thxMessage').style.display = 'block';
 				<div class="col-md-6">
 					<ul class="list-inline social-buttons">
 						<li class="list-inline-item">
-							<a href="https://twitter.com/tazi_119">
+							<a target="_blank" href="https://twitter.com/tazi_119">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</li>
-						<!-- <li class="list-inline-item">
-							<a href="#">
-								<i class="fab fa-facebook-f"></i>
+						<li class="list-inline-item">
+							<a target="_blank" href="https://www.instagram.com/tazi_top/">
+								<i class="fab fa-instagram"></i>
 							</a>
-						</li> -->
+						</li>
 					</ul>
 				</div>
 			</div>
