--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 	<link href="css/style.css" rel="stylesheet">
 
+		
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 </head>
 
