--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			<div class="row text-center">
 				<div class="col-md-12">
 					<span class="">
-						<img src="img/service4.png" alt="">
+						<img class="im" src="img/service3.png" alt="">
 					</span>
 					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
 						<h4 class="service-heading">Creating LP</h4>
