--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 		
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- ファビコン -->
+<link rel="icon" href="img/favicon.ico">
+ 
+<!-- スマホ用アイコン -->
+<link rel="apple-touch-icon" sizes="180x180" href="img/favicon.ico">
+
 
 </head>
 
