--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 		<div class="container">
 			<div class="intro-text">
 				<div class="intro-lead-in">Welcome to my page</div>
-				<div class="text-color-change">
+				<!-- <div class="text-color-change"> -->
 					<div class="intro-heading text-uppercase">kyosuke</div>
-				</div>
+				<!-- </div> -->
 				<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">next</a>
 			</div>
 		</div>
