--- a/index.html
+++ b/index.html
@@ -250,21 +250,21 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading text-uppercase">Services</h2>
-					<h3 class="section-subheading text-muted">You can write something here.</h3>
+					<h2 class="section-heading text-uppercase">The work</h2>
+					<h3 class="section-subheading text-muted">Things in production.</h3>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col-md-12">
 					<span class="">
-						<img class="im" src="img/service3.png" alt="">
+						<img class="im" src="img/aaaaa.png" alt="">
 					</span>
 					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-						<h4 class="service-heading">Creating LP</h4>
+						<h4 class="service-heading">Creating service</h4>
 					</a>
 					<p class="text-muted">
-					現在は勉強中<br>
-					今後、クオリティの高い物を生み出せるように頑張りまっす！<br>
+					現在開発中<br>
+					音楽家×絵師のマッチングアプリを創ってます✧٩(ˊωˋ*)و✧<br>
 					何かありましたらご連絡下さい！
 					</p>
 					<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Contact</a>
