--- a/index.html
+++ b/index.html
@@ -263,10 +263,11 @@
 						<h4 class="service-heading">Creating service</h4>
 					</a>
 					<p class="text-muted">
-					現在開発中<br>
-					音楽家×絵師のマッチングアプリを創ってます✧٩(ˊωˋ*)و✧<br>
-					何かありましたらご連絡下さい！
+						「KYOSAKU」<br>
+						音楽家とイラストレーターのマッチングアプリです！<br>
+						ご興味ある方は是非！！
 					</p>
+					<a href="https://kyosaku.herokuapp.com/">https://kyosaku.herokuapp.com/</a>
 					<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Contact</a>
 				</div>
 			</div>
