--- a/index.html
+++ b/index.html
@@ -264,10 +264,11 @@
 					</a>
 					<p class="text-muted">
 						「KYOSAKU」<br>
-						音楽家とイラストレーターのマッチングアプリです！<br>
+						音楽家×イラストレーターの<br>
+						マッチングアプリです！<br>
 						ご興味ある方は是非！！
 					</p>
-					<a href="https://kyosaku.herokuapp.com/">https://kyosaku.herokuapp.com/</a>
+					<a href="https://kyosaku.herokuapp.com/">https://kyosaku.herokuapp.com/</a><br>
 					<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Contact</a>
 				</div>
 			</div>
