--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
 						「KYOSAKU」<br>
 						音楽家×イラストレーターの<br>
 						マッチングアプリです！<br>
-						ご興味ある方は是非！！
+						ご興味ある方は是非！！<br>
 					</p>
-					<a href="https://kyosaku.herokuapp.com/">https://kyosaku.herokuapp.com/</a><br>
+					<a href="https://kyosaku.herokuapp.com/">https://kyosaku.herokuapp.com/</a><br><br>
 					<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Contact</a>
 				</div>
 			</div>
