--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						マッチングアプリです！<br>
 						ご興味ある方は是非！！<br>
 					</p>
-					<a href="https://kyosaku.herokuapp.com/">https://kyosaku.herokuapp.com/</a><br><br>
+					<a href="https://kyosaku.herokuapp.com/" target=”_blank”>https://kyosaku.herokuapp.com/</a><br><br>
 					<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Contact</a>
 				</div>
 			</div>
