--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<a class="nav-link js-scroll-trigger" href="#portfolio">Memories</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#services">Services</a>
+						<a class="nav-link js-scroll-trigger" href="#services">Portfolio</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
@@ -72,7 +72,6 @@
 				<!-- <div class="text-color-change"> -->
 					<div class="intro-heading text-uppercase">kyosuke</div>
 				<!-- </div> -->
-				<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">next</a>
 			</div>
 		</div>
 	</header>
@@ -94,11 +93,11 @@
 								<img class="h-100 rounded-circle img-fluid" src="img/undraw_toy_car_7umw.png" alt="">
 							</div>
 							<div class="timeline-panel">
-								<div class="timeline-heading">
+								<div class="timeline-heading" style="text-align: center;">
 									<h4>2001〜</h4>
 									<h4 class="subheading"></h4>
 								</div>
-								<div class="timeline-body">
+								<div class="timeline-body" style="text-align: left;">
 									<p class="text-muted">
 										① 2001年1月19日生まれ。(現19歳)<br>
 										② 出身は熊本。現在は東京在住。<br>
@@ -112,7 +111,7 @@
 								<img class="h-100 rounded-circle img-fluid" src="img/workout.png" alt="">
 							</div>
 							<div class="timeline-panel">
-								<div class="timeline-heading">
+								<div class="timeline-heading" style="text-align: center;">
 									<h4>2016 - 2019</h4>
 									<h4 class="subheading"></h4>
 								</div>
@@ -130,11 +129,11 @@
 								<img class="h-100 rounded-circle img-fluid" src="img/hirata.png" alt="">
 							</div>
 							<div class="timeline-panel">
-								<div class="timeline-heading">
+								<div class="timeline-heading" style="text-align: center;">
 									<h4>2019 - 2020</h4>
 									<h4 class="subheading"></h4>
 								</div>
-								<div class="timeline-body">
+								<div class="timeline-body" style="text-align: left;">
 									<p class="text-muted">
 										① 地元の大手IoT企業へ就職。<br>
 										② プログラミングに興味を持ち始める。<br>
@@ -148,7 +147,7 @@
 								<img class="h-100 rounded-circle img-fluid" src="img/jokyo.png" alt="">
 							</div>
 							<div class="timeline-panel">
-								<div class="timeline-heading">
+								<div class="timeline-heading" style="text-align: center;">
 									<h4>2020〜</h4>
 									<h4 class="subheading"></h4>
 								</div>
@@ -161,12 +160,23 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted">
+						<li>
 							<div class="timeline-image">
-								<h4>Still more<br>
-									From<br>
-									Now on
-								</h4>
+								<img class="h-100 rounded-circle img-fluid" src="img/undraw_Work_time_re_hdyv.png" alt="">
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading" style="text-align: center;">
+									<h4>〜現在〜</h4>
+									<h4 class="subheading"></h4>
+								</div>
+								<div class="timeline-body" style="text-align: left;">
+									<p class="text-muted">
+										① 医療DXの企業にてインターン。<br>
+										② 0からの立ち上げで、機能選定を行う。<br>
+										③ Figmaを用いて、0からデザインを作成。<br>
+										④ PHPで、各機能の実装に尽力中。
+									</p>
+								</div>
 							</div>
 						</li>
 					</ul>
@@ -250,8 +260,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading text-uppercase">The work</h2>
-					<h3 class="section-subheading text-muted">Things in production.</h3>
+					<h2 class="section-heading text-uppercase">My portfolio</h2>
+					<h3 class="section-subheading text-muted">Works I made.</h3>
 				</div>
 			</div>
 			<div class="row text-center">
@@ -259,17 +269,14 @@
 					<span class="">
 						<img class="im" src="img/aaaaa.png" alt="">
 					</span>
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-						<h4 class="service-heading">Creating service</h4>
-					</a>
-					<p class="text-muted">
-						「KYOSAKU」<br>
-						音楽家×イラストレーターの<br>
-						マッチングアプリです！<br>
-						ご興味ある方は是非！！<br>
-					</p>
-					<a href="https://kyosaku.herokuapp.com/" target=”_blank”>https://kyosaku.herokuapp.com/</a><br><br>
-					<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Contact</a>
+					<div style="margin-top: 40px;">
+						<a href="https://kyosaku.herokuapp.com/" target=”_blank”>「KYOSAKU」</a><br>
+							<p class="text-muted">
+							音楽家とイラストレーターのマッチングアプリです！<br>
+							長期的に活動していきたい仲間を見つけることができます。<br>
+							名前は「共作」と「今日咲く」を掛けています。<br>
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -288,22 +295,48 @@
 				<div class="col-sm-4">
 					<div class="skills">
 						<img class="mx-auto rounded-circle" src="img/html4.png" alt="">
-						<h4>HTML</h4>
-						<p class="text-muted">勉強中</p>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="skills">
-						<img class="mx-auto rounded-circle" src="img/css3.png" alt="">
-						<h4>CSS</h4>
-						<p class="text-muted">勉強中</p>
+						<h4>HTML , CSS</h4>
+						<p class="text-muted" style="margin-top:20px; line-height:200%">
+							Bootstrapを用いた記載もできます。<br>
+							グリッド機能を用いて作成します。<br>
+							上記技術を用いての経験は<br>
+							ポートフォリオ・インターン・<br>
+							コミュニティでの集団開発 などです。<br><br>
+							今後は、他人が読んだときの解読のしやすさや<br>
+							少しでも少ないコードで記載することを目標に<br>
+							勉強・作成を続けていきます。
+						</p>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="skills">
 						<img class="mx-auto rounded-circle" src="img/php2.png" alt="">
 						<h4>PHP</h4>
-						<p class="text-muted">勉強中</p>
+						<p class="text-muted" style="margin-top:20px; line-height:200%">
+							Laravelを用いて使用しています。<br>
+							インターンの開発でも使用しています。<br>
+							MVCモデルや記載方法の基本理解はできており<br>
+							掲示板やマッチングアプリなどでの<br>
+							簡易的なサービスは自作することができます。<br><br>
+							今後はリファクタリングに重きを置いて<br>
+							開発に取り組んで行こうと考えています。
+						</p>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="skills">
+						<img class="mx-auto rounded-circle" src="img/figma.png" alt="">
+						<h4>Figma</h4>
+						<p class="text-muted" style="margin-top:20px; line-height:200%">
+							ポートフォリオを作る際に使用しました。<br>
+							また、インターンでも使用した経験があり<br>
+							ブラッシュアップしたサービスを模倣したり<br>
+							必要に応じて書籍を活用し<br>
+							全くのゼロベースで自力で作り上げました。<br><br>
+							ただ作るのではなく、代表に意見提出をし<br>
+							自社の色味を出しつつ、モダンなデザインを<br>
+							作ることを意識しました。
+						</p>
 					</div>
 				</div>
 			</div>
