--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 								<div class="timeline-body" style="text-align: left;">
 									<p class="text-muted">
 										① 2001年1月19日生まれ。(現20歳)<br>
-										② 出身は熊本。現在は東京在住。<br>
-										③ 趣味は筋トレと絶景巡り。
+										② 出身は熊本。現在は東京都在住。<br>
+										③ 趣味は音楽鑑賞と景色巡り。
 									</p>
 								</div>
 							</div>
@@ -155,7 +155,8 @@
 									<p class="text-muted">
 										① 勢いで上京する。<br>
 										② シェアハウスに住み始め、紹介でエンジニアの方と出会う。<br>
-										③ その方の紹介でGAOBowlでの学習開始。
+										③ その方の紹介でスクールでの学習開始。
+										④ 卒業後、短期の集団開発に携わる。
 									</p>
 								</div>
 							</div>
@@ -247,7 +248,7 @@
 					<p class="text-muted"></p>
 					<p class="text-muted">
 						上京後、東京タワーに訪れて写真を撮りました！<br>
-						予想以上の迫力に圧倒されました〜<br>
+						予想以上の迫力に圧倒されました。<br>
 						将来は、一望できるタワマンに住んでみたい...笑
 					</p>
 				</div>
@@ -414,7 +415,7 @@ document.getElementById('thxMessage').style.display = 'block';
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-md-6">
-					<span class="copyright">Copyright &copy; TAJIMA_LP 2020</span>
+					<span class="copyright">Copyright &copy; Kyosuke Tajima</span>
 				</div>
 				<div class="col-md-6">
 					<ul class="list-inline social-buttons">
