--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 									<p class="text-muted">
 										① 勢いで上京する。<br>
 										② シェアハウスに住み始め、紹介でエンジニアの方と出会う。<br>
-										③ その方の紹介でスクールでの学習開始。
+										③ その方の紹介でスクールでの学習開始。<br>
 										④ 卒業後、短期の集団開発に携わる。
 									</p>
 								</div>
