--- a/index.html
+++ b/index.html
@@ -2,38 +2,25 @@
 <html lang="ja">
 
 <head>
-
 	<meta charset="utf-8">
-
 	<title>Kyosuke-LP</title>
-
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
 	<link href="css/gaogao.css" rel="stylesheet">
-
 	<link href="css/style.css" rel="stylesheet">
-
-		
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- ファビコン -->
-<link rel="icon" href="img/favicon.ico">
- 
-<!-- スマホ用アイコン -->
-<link rel="apple-touch-icon" sizes="180x180" href="img/favicon.ico">
-
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- ファビコン -->
+	<link rel="icon" href="img/favicon.ico">
+	<!-- スマホ用アイコン -->
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon.ico">
 </head>
 
 <body id="page-top">
-
-	
+	<!-- CSSアニメーション -->
 	<div class="shutter">
 		<img src="img/atyh.jpg">
 	</div>
-
-	<!-- Navigation -->
+	<!-- 本文 -->
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
 		<div class="container">
 			<a class="navbar-brand js-scroll-trigger" href="#page-top">Kyosuke Tajima</a>
@@ -70,7 +57,7 @@
 			<div class="intro-text">
 				<div class="intro-lead-in">Welcome to my page</div>
 				<!-- <div class="text-color-change"> -->
-					<div class="intro-heading text-uppercase">kyosuke</div>
+				<div class="intro-heading text-uppercase">kyosuke</div>
 				<!-- </div> -->
 			</div>
 		</div>
@@ -204,9 +191,7 @@
 					</span>
 				</div>
 				<div class="col-md-6">
-					<!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"> -->
-						<h4 class="service-heading">学生時代のラグビー</h4>
-					<!-- </a> -->
+					<h4 class="service-heading">学生時代のラグビー</h4>
 					<p class="text-muted"></p>
 					<p class="text-muted">
 						高校時代にやっていた、ラグビーの写真です！<br>
@@ -223,15 +208,13 @@
 					</span>
 				</div>
 				<div class="col-md-6 order-md-1">
-					<!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"> -->
-						<h4 class="service-heading">in 花岡山</h4>
-					<!-- </a> -->
+					<h4 class="service-heading">in 花岡山</h4>
 					<p class="text-muted"></p>
 					<p class="text-muted">
 						この写真は、熊本の花岡山の景色です。<br>
 						熊本市の街並みが一望できる場所です。<br>
 						緑と街が丁度いい感じなので、個人的に住みやすいと思います！<br>
-						
+
 					</p>
 				</div>
 			</div>
@@ -242,9 +225,7 @@
 					</span>
 				</div>
 				<div class="col-md-6">
-					<!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"> -->
-						<h4 class="service-heading">上京後の東京タワー</h4>
-					<!-- </a> -->
+					<h4 class="service-heading">上京後の東京タワー</h4>
 					<p class="text-muted"></p>
 					<p class="text-muted">
 						上京後、東京タワーに訪れて写真を撮りました！<br>
@@ -272,7 +253,7 @@
 					</span>
 					<div style="margin-top: 40px;">
 						<a href="https://kyosaku.herokuapp.com/" target=”_blank”>「KYOSAKU」</a><br>
-							<p class="text-muted">
+						<p class="text-muted">
 							音楽家とイラストレーターのマッチングアプリです！<br>
 							長期的に活動していきたい仲間を見つけることができます。<br>
 							名前は「共作」と「今日咲く」を掛けています。<br>
@@ -360,53 +341,57 @@
 			</div>
 
 			<div id="formWrapper">
-			<div class="row">
-				<div class="col-lg-12">
-					<form id="contactForm" method="post" name="myForm" target="dummyIframe" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSchwrWiLrHDw0l0IGi6LLdY-pOKlhXOnTtX1QQAZlcWgI1dlA/formResponse" name="sentMessage" novalidate="novalidate">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<input class="form-control" name="entry.1496331100" id="name" type="text" placeholder="Your Name *" required="required"
-										data-validation-required-message="Please enter your name.">
-									<p class="help-block text-danger"></p>
+				<div class="row">
+					<div class="col-lg-12">
+						<form id="contactForm" method="post" name="myForm" target="dummyIframe"
+							action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSchwrWiLrHDw0l0IGi6LLdY-pOKlhXOnTtX1QQAZlcWgI1dlA/formResponse"
+							name="sentMessage" novalidate="novalidate">
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group">
+										<input class="form-control" name="entry.1496331100" id="name" type="text" placeholder="Your Name *"
+											required="required" data-validation-required-message="Please enter your name.">
+										<p class="help-block text-danger"></p>
+									</div>
+									<div class="form-group">
+										<input class="form-control" name="entry.688090226" id="email" type="email"
+											placeholder="Your Email *" required="required"
+											data-validation-required-message="Please enter your email address.">
+										<p class="help-block text-danger"></p>
+									</div>
 								</div>
-								<div class="form-group">
-									<input class="form-control" name="entry.688090226" id="email" type="email" placeholder="Your Email *" required="required"
-										data-validation-required-message="Please enter your email address.">
-									<p class="help-block text-danger"></p>
+								<div class="col-md-6">
+									<div class="form-group">
+										<textarea class="form-control" name="entry.1022348274" id="message" placeholder="Your Message *"
+											required="required" data-validation-required-message="Please enter a message."></textarea>
+										<p class="help-block text-danger"></p>
+									</div>
+								</div>
+								<div class="clearfix"></div>
+								<div class="col-lg-12 text-center">
+									<div id="success"></div>
+									<button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit" 　value="送信"
+										onclick="sendGform()">Send
+										Message</button>
 								</div>
 							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<textarea class="form-control" name="entry.1022348274" id="message" placeholder="Your Message *" required="required"
-										data-validation-required-message="Please enter a message."></textarea>
-									<p class="help-block text-danger"></p>
-								</div>
-							</div>
-							<div class="clearfix"></div>
-							<div class="col-lg-12 text-center">
-								<div id="success"></div>
-								<button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit"　value="送信" onclick="sendGform()">Send
-									Message</button>
-							</div>
-						</div>
-					</form>
+						</form>
+					</div>
 				</div>
+				<div>
+					<!-- <input type="button" value="送信" onclick="sendGform()"> -->
+				</div>
+				</form>
+				<iframe name="dummyIframe" style="display:none;"></iframe>
 			</div>
-			<div>
-				<!-- <input type="button" value="送信" onclick="sendGform()"> -->
-		</div>
-</form>
-<iframe name="dummyIframe" style="display:none;"></iframe>
-</div>
-<div id="thxMessage" style="display:none;">お問い合わせありがとうございました。</div>
-<script>
-function sendGform(){
-document.myForm.submit();
-document.getElementById('formWrapper').style.display = 'none';
-document.getElementById('thxMessage').style.display = 'block';
-}
-</script>
+			<div id="thxMessage" style="display:none;">お問い合わせありがとうございました。</div>
+			<script>
+				function sendGform() {
+					document.myForm.submit();
+					document.getElementById('formWrapper').style.display = 'none';
+					document.getElementById('thxMessage').style.display = 'block';
+				}
+			</script>
 		</div>
 	</section>
 
@@ -437,14 +422,14 @@ document.getElementById('thxMessage').style.display = 'block';
 
 	<!-- Bootstrap core JavaScript -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-		crossorigin="anonymous"></script>
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-		crossorigin="anonymous"></script>
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-		crossorigin="anonymous"></script>
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
 
 	<!-- Font Awesome core JavaScript -->
 	<script src="https://kit.fontawesome.com/6d5d0e571f.js" crossorigin="anonymous"></script>
