--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									<p class="text-muted">
 										① 2001年1月19日生まれ。(現20歳)<br>
 										② 出身は熊本。現在は東京都在住。<br>
-										③ 趣味は音楽鑑賞と景色巡り。
+										③ 趣味は音楽鑑賞とカフェ巡り。
 									</p>
 								</div>
 							</div>
@@ -141,9 +141,9 @@
 								<div class="timeline-body">
 									<p class="text-muted">
 										① 勢いで上京する。<br>
-										② シェアハウスに住み始め、紹介でエンジニアの方と出会う。<br>
-										③ その方の紹介でスクールでの学習開始。<br>
-										④ 卒業後、短期の集団開発に携わる。
+										③ スクールでの学習開始。<br>
+										④ 卒業後、短期の集団開発に携わる。<br>
+										⑤ 医療DXの企業にてインターン。
 									</p>
 								</div>
 							</div>
@@ -159,10 +159,9 @@
 								</div>
 								<div class="timeline-body" style="text-align: left;">
 									<p class="text-muted">
-										① 医療DXの企業にてインターン。<br>
-										② 0からの立ち上げで、機能選定を行う。<br>
-										③ Figmaを用いて、0からデザインを作成。<br>
-										④ PHPで、各機能の実装に尽力中。
+										① 介護DXの企業に就職。<br>
+										② システム運用企業へ常駐中。<br>
+										③ 常駐傍ら、社内開発室にて開発中。<br>
 									</p>
 								</div>
 							</div>
@@ -295,8 +294,8 @@
 						<img class="mx-auto rounded-circle" src="img/php2.png" alt="">
 						<h4>PHP</h4>
 						<p class="text-muted" style="margin-top:20px; line-height:200%">
-							Laravelを用いて使用しています。<br>
-							インターンの開発でも使用しています。<br>
+							Laravelを用いて開発しています。<br>
+							社内開発でも使用しています。<br>
 							MVCモデルや記載方法の基本理解はできており<br>
 							掲示板やマッチングアプリなどでの<br>
 							簡易的なサービスは自作することができます。<br><br>
