--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 					<p class="text-muted">
 						この写真は、熊本の花岡山の景色です。<br>
 						熊本市の街並みが一望できる場所です。<br>
-						緑と街が丁度いい感じなので、個人的に住みやすいと思います！<br>
+						緑と街が丁度いい感じなので、<span class="text_span">個人的に住みやすいと思います！</span><br>
 
 					</p>
 				</div>
@@ -253,8 +253,8 @@
 					<div style="margin-top: 40px;">
 						<a href="https://kyosaku.herokuapp.com/" target=”_blank”>「KYOSAKU」</a><br>
 						<p class="text-muted">
-							音楽家とイラストレーターのマッチングアプリです！<br>
-							長期的に活動していきたい仲間を見つけることができます。<br>
+							音楽家とイラストレーターの<span class="text_span">マッチングアプリです！</span><br>
+							長期的に活動していきたい仲間を<span class="text_span">見つけることができます。</span><br>
 							名前は「共作」と「今日咲く」を掛けています。<br>
 						</p>
 					</div>
